<resources>
    <string name="app_name">TreasureGo</string>
    <string name="startQuest">Start Quest</string>
    <string name="resettreasures">Reset Treasures</string>
    <string name="estimated_tta">Estimated time to arrival</string>
    <string name="time_passed">Time passed</string>
    <string name="time">Time</string>
    <string name="current_temperature">Current temperature</string>
    <string name="temperature">Temperature</string>
    <string name="current_speed">Current Speed</string>
    <string name="speed">Speed</string>
    <string name="averageSpeed">Average Speed</string>
    <string name="distance">Distance</string>
    <string name="abort_button">Go back</string>
    <string name="congratulations">Congratulations, you found a treasure!</string>
    <string name="play_again">Play again!</string>
    <string name="close_app">Close app</string>
    <string name="searchingForText">Searching for</string>
    <string name="searchingForValue">Treasure</string>
    <string name="n.a.">n.a.</string>
    <string name="noLocationServicesAvailable">GPS does not seem to be available. Have you switched it on or are you in flight mode?</string>
    <string name="openLocationSettings">Would you like to open the location settings?</string>
    <string name="cancel">Cancel</string>
    <string name="currentReward">Current reward <!--speed up to gain more)--></string>
    <string name="score">Score</string>
    <string name="currentScore">Current score</string>
    <string name="pleasePermissions">Please allow TreasureGo all the required permissions. Thank you.</string>
    <string name="onPermissionsDeniedOnce">Are you sure? If you want to use TreasureGo, please grant all permissions. We now ask you again.</string>
    <string name="onPermissionsDeniedTwice">We are sorry, but TreasureGo cannot run without permissions. Goodbye!</string>
    <string name="welcome">Welcome to TreasureGo!</string>
    <string name="chooseTreasure">Please choose a treasure</string>
    <string name="placeholder">Placeholder</string>
    <string name="coins">coins</string>
    <string name="done">done!</string>
    <string name="thanksHaveFun">"Thank you and have fun!"</string>
    <string name="thanksBye">Thank you for playing TreasureGo. Goodbye!</string>
    <string name="NAnoSensor">(no sensor)</string>
    <string name="degreeC">"\u2103"</string>
    <string name="speedUnit">m/s</string>
    <string name="meters">m</string>
    <string name="kilometers">km</string>
    <string name="googleMapsKey">AIzaSyDpg8Tmcherqv8497UfCa6dK0zxCvueLU8</string>
    <string name="title_activity_maps">Map</string>
    <string name="openMap">Get hint!</string>
    <string name="hintInfo">Hint used. No more hints left. Good luck with your Quest, fearless hunter!</string>
    <string name="gpsIsLoading">GPS is loading...</string>
    <string name="collected">collected!</string>
    <string name="noGemFoundHere">No gem found here. Try again!</string>
    <string name="arGemsLeft">Gems left to find</string>
    <string name="arGemCollectionTimeText">Time for collecting gems:</string>
    <string name="timeUnitSeconds">s</string>
    <string name="cameraNotFound">Camera not found</string>
    <string name="csvCouldNotBeLoaded">CSV file could not be loaded.</string>
</resources>
