<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="ch.mbuehler.eth.mgis.treasurego.CompassActivity">


    <ImageView
        android:id="@+id/arrow"
        android:layout_width="94dp"
        android:layout_height="77dp"
        android:layout_marginBottom="416dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.458"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/arrow" />

    <Button
        android:id="@+id/back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:onClick="onAbort"
        android:text="@string/abort_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


    <TableLayout
        android:layout_width="368dp"
        android:layout_height="400dp"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/arrow"
        tools:layout_editor_absoluteX="8dp"
        >

        <TableRow>

            <TextView
                android:id="@+id/searchingForText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/searchingForValue"
                app:layout_constraintBottom_toBottomOf="parent"
                tools:layout_editor_absoluteX="176dp"
                tools:layout_editor_absoluteY="0dp" />

            <TextView
                android:id="@+id/searchingForValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=""
                app:layout_constraintBottom_toBottomOf="parent"
                tools:layout_editor_absoluteX="176dp"
                tools:layout_editor_absoluteY="0dp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/averageSpeedText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="0"
                android:text="@string/avergae_speed"
                app:layout_constraintTop_toBottomOf="@+id/currentSpeedText" />


            <TextView
                android:id="@+id/averageSpeedValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="1"
                android:layout_marginBottom="8dp"
                android:inputType="numberDecimal"
                android:text="@string/n.a." />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">


            <TextView
                android:id="@+id/currentSpeedText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="0"
                android:text="@string/current_speed"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/CurrentTemperatureText" />


            <TextView
                android:id="@+id/currentSpeedValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="1"
                android:inputType="numberDecimal"
                android:text="@string/n.a."
                app:layout_constraintBottom_toTopOf="@+id/averageSpeedValue" />


        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/distanceText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="0"
                android:text="@string/distance" />

            <TextView
                android:id="@+id/distanceValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="1"
                android:inputType="numberDecimal"

                android:text="@string/n.a." />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/CurrentTemperatureText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="0"
                android:text="@string/current_temperature" />


            <TextView
                android:id="@+id/currentTemperatureValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:layout_column="1"
                android:inputType="numberDecimal"
                android:text="@string/n.a."
                app:layout_constraintBottom_toTopOf="@+id/currentSpeedValue"
                tools:layout_editor_absoluteX="253dp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/TimePassedText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:layout_column="0"
                android:ems="10"
                android:inputType="textPersonName"
                android:text="@string/time_passed"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/timePassedValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:layout_column="1"
                android:ems="10"
                android:inputType="time"
                android:text="@string/n.a."
                app:layout_constraintBottom_toTopOf="@+id/currentTemperatureValue"
                app:layout_constraintRight_toRightOf="parent" />
        </TableRow>
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/CurrentRewardText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:layout_column="0"
                android:ems="10"
                android:inputType="textPersonName"
                android:text="@string/currentReward"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/CurrentRewardValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:layout_column="1"
                android:ems="10"
                android:inputType="time"
                android:text="@string/n.a."
                app:layout_constraintBottom_toTopOf="@+id/currentTemperatureValue"
                app:layout_constraintRight_toRightOf="parent" />
        </TableRow>
    </TableLayout>

    <TextView
        android:id="@+id/errorText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:text="@string/noLocationServicesAvailable"
        android:textColor="?attr/colorError"
        app:layout_constraintBottom_toTopOf="@+id/back"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


</android.support.constraint.ConstraintLayout>
